feat: added backend route and controller for fetching journey data
